--- a/src/app/Layouts/HomeLive/homeLive.sass
+++ b/src/app/Layouts/HomeLive/homeLive.sass
@@ -1,12 +1,14 @@
 .home-live-container
-  width: 100%
+  width: 80%
   min-height: 100vh
-  padding: 20px
+  margin: 0 auto
+  padding: 20px 0
   background: #0f1419
   color: #e4e6eb
 
   .live-header
     margin-bottom: 24px
+    max-width: 100%
 
     .live-title
       display: flex
